@@ -147,11 +147,10 @@ sub autorespond {
 
     return $p{test_ok} if defined $p{test_ok}; # for testing
 
-    my $ver = $conf->{'install_autorespond'};
-    if ( ! $ver ) {
+    my $ver = $conf->{'install_autorespond'} or do {
         $log->audit( "autorespond install skipped (disabled)" );
         return;
-    }
+    };
 
     if ( $OSNAME eq "freebsd" && $ver eq "port" ) {
         $freebsd->install_port( "autorespond" );
@@ -206,18 +205,16 @@ sub clamav {
     my $self  = shift;
     my %p = validate( @_, { %std_opts } );
 
-    return $p{test_ok} if defined $p{test_ok}; # for testing only
+    return $p{test_ok} if defined $p{test_ok}; # for testing
 
     my $prefix   = $conf->{'toaster_prefix'}      || "/usr/local";
     my $confdir  = $conf->{'system_config_dir'}   || "/usr/local/etc";
     my $share    = "$prefix/share/clamav";
     my $clamuser = $conf->{'install_clamav_user'} || "clamav";
-    my $ver      = $conf->{'install_clamav'};
-
-    unless ($ver) {
+    my $ver      = $conf->{'install_clamav'} or do {
         $log->audit( "clamav: installing, skipping (disabled)" );
         return;
-    }
+    };
 
     my $installed;
 
@@ -1245,8 +1242,10 @@ sub cronolog {
 
     return $p{test_ok} if defined $p{test_ok}; # for testing
 
-    my $ver = $conf->{'install_cronolog'} or 
-        return $log->error( "cronolog: skipping install (disabled)", debug=>1,fatal=>0 );
+    my $ver = $conf->{'install_cronolog'} or do {
+        $log->audit( "cronolog: skipping install (disabled)");
+        return;
+    };
 
     if ( $OSNAME eq "freebsd" && $ver eq "port" ) {
         return $self->cronolog_freebsd();
@@ -1294,8 +1293,10 @@ sub daemontools {
 
     return $p{test_ok} if defined $p{test_ok}; 
 
-    my $ver = $conf->{'install_daemontools'} or 
-        return $log->error( "daemontools: installing, (disabled)",fatal=>0 );
+    my $ver = $conf->{'install_daemontools'} or do {
+        $log->audit( "daemontools: installing, (disabled)" );
+        return;
+    };
 
     $self->daemontools_freebsd() if $OSNAME eq "freebsd";
 
@@ -1377,9 +1378,7 @@ sub daemontools_src {
 
 sub daemontools_freebsd {
 
-    return 1 if $freebsd->is_port_installed( "daemontools", fatal=>0 );
-
-    $freebsd->install_port( "daemontools", 
+    return $freebsd->install_port( "daemontools", 
         options => '# This file is generated by Mail Toaster
 # Options for daemontools-0.76_15
 _OPTIONS_READ=daemontools-0.76_15
@@ -1389,9 +1388,7 @@ WITH_S_NORMAL=true
 WITHOUT_SIGQ12=true
 WITH_TESTS=true',
         fatal => 0,
-    ) 
-    or return $log->error( "port install of daemontools failed!", fatal => 0);
-    return 1;
+    );
 };
 
 sub daemontools_test {
@@ -1534,8 +1531,10 @@ sub djbdns {
 
     return $p{test_ok} if defined $p{test_ok}; # for testing 
 
-    return $log->error( "djbdns: installing, skipping (disabled)",fatal=>0 )
-        if !$conf->{'install_djbdns'};
+    if ( ! $conf->{'install_djbdns'} ) {
+        $log->audit( "djbdns: installing, skipping (disabled)" );
+        return;
+    };
 
     $self->daemontools();
     $self->ucspi_tcp();
@@ -1545,18 +1544,7 @@ sub djbdns {
         if ( -x $util->find_bin( 'tinydns', fatal => 0 ) );
 
     if ( $OSNAME eq "freebsd" ) {
-        $freebsd->install_port( "djbdns",
-            options => "#\n
-# Options for djbdns-1.05_13
-_OPTIONS_READ=djbdns-1.05_13
-WITHOUT_DUMPCACHE=true
-WITHOUT_IPV6=true
-WITHOUT_IGNOREIP=true
-WITHOUT_JUMBO=true
-WITH_MAN=true
-WITHOUT_PERSISTENT_MMAP=true
-WITHOUT_SRV=true\n",
-        );
+        $self->djbdns_freebsd();
 
         return $log->audit( "djbdns: installing djbdns, ok" )
             if $util->find_bin( 'tinydns', fatal => 0 );
@@ -1577,6 +1565,22 @@ WITHOUT_SRV=true\n",
         bintest => 'tinydns',
     );
 }
+
+sub djbdns_freebsd {
+
+    $freebsd->install_port( "djbdns",
+        options => "#\n
+# Options for djbdns-1.05_13
+_OPTIONS_READ=djbdns-1.05_13
+WITHOUT_DUMPCACHE=true
+WITHOUT_IPV6=true
+WITHOUT_IGNOREIP=true
+WITHOUT_JUMBO=true
+WITH_MAN=true
+WITHOUT_PERSISTENT_MMAP=true
+WITHOUT_SRV=true\n",
+    );
+};
 
 sub docs {
 
@@ -1679,7 +1683,6 @@ sub domainkeys {
 }
 
 sub dovecot {
-
     my $self  = shift;
     my %p = validate( @_, { %std_opts } );
 
@@ -2128,23 +2131,12 @@ sub ezmlm {
 }
 
 sub ezmlm_cgi {
-
     my $self  = shift;
-    my $debug = $self->{'debug'};
-
-    my %p = validate( @_, {
-            'fatal' => { type => BOOLEAN, optional => 1, default => 1 },
-            'debug' => { type => BOOLEAN, optional => 1, default => $debug },
-            'test_ok' => { type => BOOLEAN, optional => 1, },
-        },
-    );
-
-    my $fatal = $p{'fatal'};
-       $debug = $p{'debug'};
+    my %p = validate( @_, { %std_opts } );
 
     return $p{test_ok} if defined $p{test_ok}; # for testing
 
-    return if ! $conf->{'install_ezmlm_cgi'};
+    return 1 if ! $conf->{'install_ezmlm_cgi'};
 
     if ( $OSNAME eq "freebsd" ) {
         $freebsd->install_port( "p5-Archive-Tar", 
@@ -2637,6 +2629,13 @@ EO_ISOQLOG
 
 sub lighttpd {
     my $self = shift;
+    my %p = validate( @_, { %std_opts } );
+    return $p{test_ok} if defined $p{test_ok}; # for testing
+
+    if ( ! $conf->{install_lighttpd} ) {
+        $log->audit("skipping lighttpd install (disabled)");
+        return;
+    };
 
     if ( $OSNAME eq 'freebsd' ) {
         $self->lighttpd_freebsd();
@@ -2649,6 +2648,7 @@ sub lighttpd {
     $self->lighttpd_config();
     $self->php();
     $self->lighttpd_start();
+    return 1;
 };
 
 sub lighttpd_freebsd {
@@ -3555,8 +3555,15 @@ sub mrm {
 
 sub munin {
     my $self = shift;
+    my %p = validate( @_, { %std_opts } );
+    return $p{test_ok} if defined $p{test_ok}; # for testing
 
-    return $log->error("no munin install support for $OSNAME") 
+    if ( ! $conf->{install_munin} ) {
+        $log->audit("skipping munin install (disabled)");
+        return;
+    };
+
+    return $log->audit("no munin install support for $OSNAME") 
         if $OSNAME ne 'freebsd';
 
 # the newer (default) version of rrdtool requires an obscene amount 
@@ -3629,16 +3636,13 @@ qq{\n$locals\n},
 
 sub mysql {
     my $self  = shift;
-    my $debug = $self->{'debug'};
+    my %p = validate( @_, { %std_opts } );
+    return $p{test_ok} if defined $p{test_ok}; # for testing
 
-    my %p = validate( @_, {
-            'fatal' => { type => BOOLEAN, optional => 1, default => 1 },
-            'debug' => { type => BOOLEAN, optional => 1, default => $debug },
-            'test_ok' => { type => BOOLEAN, optional => 1, },
-        },
-    );
-
-    return $p{test_ok} if defined $p{test_ok}; # for testing only
+    if ( ! $conf->{install_mysql} ) {
+        $log->audit("skipping mysql install (disabled)");
+        return;
+    };
 
     require Mail::Toaster::Mysql;
     my $mysql = Mail::Toaster::Mysql->new( 'log' => $toaster );
@@ -4097,16 +4101,15 @@ sub ports {
 }
 
 sub qmailadmin {
-
     my $self  = shift;
-    my %p = validate( @_, { %std_opts, },);
+    my %p = validate( @_, { %std_opts } );
 
-    my $ver = $conf->{'install_qmailadmin'};
+    return $p{test_ok} if defined $p{test_ok};
 
-    unless ($ver) {
-        print "skipping qmailadmin install, it's not selected!\n";
-        return 0;
-    }
+    my $ver = $conf->{'install_qmailadmin'} or do {
+        $log->audit( "skipping qmailadmin install, it's not selected!");
+        return;
+    };
 
     my $package = "qmailadmin-$ver";
     my $site    = "http://" . $conf->{'toaster_sf_mirror'};
@@ -4309,14 +4312,12 @@ sub razor {
     my $self  = shift;
     my %p = validate( @_, { %std_opts },);
 
-    my $ver = $conf->{'install_razor'};
-
-    unless ( $ver ) {
+    my $ver = $conf->{'install_razor'} or do {
         $log->audit( "razor: installing, skipping (disabled)" );
-        return 0;
-    }
+        return;
+    };
 
-    return $p{test_ok} if defined $p{test_ok}; # for testing only
+    return $p{test_ok} if defined $p{test_ok}; # for testing
 
     $util->install_module( "Digest::Nilsimsa" );
     $util->install_module( "Digest::SHA1" );
@@ -4498,8 +4499,8 @@ sub roundcube {
     return $p{test_ok} if defined $p{test_ok}; # for testing 
 
     if ( ! $conf->{'install_roundcube'} ) {
-        $log->audit( "not installing roundcube, not selected!", debug=>1);
-        return 0;
+        $log->audit( "not installing roundcube, not selected!" );
+        return;
     };
 
     if ( $OSNAME eq "freebsd" ) {
@@ -4685,17 +4686,16 @@ sub simscan {
     my $self  = shift;
     my %p = validate( @_, { %std_opts },);
 
-    if ( ! $conf->{'install_simscan'} ) {
+    return $p{test_ok} if defined $p{test_ok}; # for testing 
+
+    my $ver = $conf->{'install_simscan'} or do {
         $log->audit( "vqadmin: installing, skipping (disabled)" );
         return;
-    }
+    };
 
-    return $p{test_ok} if defined $p{test_ok}; # for testing only
-
-    my $ver     = $conf->{'install_simscan'};
     if ( $OSNAME eq 'freebsd' ) {
-        $self->simscan_freebsd_port();
-        return if $ver eq 'port';
+        my $r = $self->simscan_freebsd_port();
+        return $r if $ver eq 'port';
     };
 
     my $user    = $conf->{'simscan_user'} || "clamav";
@@ -5114,12 +5114,12 @@ sub spamassassin {
     my $self  = shift;
     my %p = validate( @_, { %std_opts },);
 
+    return $p{test_ok} if defined $p{test_ok};
+
     if ( !$conf->{'install_spamassassin'} ) {
         $log->audit( "spamassassin: installing, skipping (disabled)" );
         return;
     }
-
-    return $p{test_ok} if defined $p{test_ok};
 
     if ( $OSNAME eq "freebsd" ) {
         $self->spamassassin_freebsd();
@@ -5355,8 +5355,10 @@ sub squirrelmail {
 
     return $p{test_ok} if defined $p{test_ok}; # for testing
 
-    my $ver = $conf->{'install_squirrelmail'}
-        or return $log->error( "skipping squirrelmail install. it's not enabled.",fatal=>0);
+    my $ver = $conf->{'install_squirrelmail'} or do {
+        $log->audit( 'skipping squirrelmail install (disabled)');
+        return;
+    };
 
     if ( $OSNAME eq "freebsd" && $ver eq "port" ) {
         $self->php();
@@ -5563,11 +5565,12 @@ sub sqwebmail {
     my $self  = shift;
     my %p = validate( @_, { %std_opts },);
 
-    my $ver = $conf->{'install_sqwebmail'};
-    if ( ! $ver ) {
-        print "Sqwebmail installation is disabled!\n";
+    return $p{test_ok} if defined $p{test_ok};
+
+    my $ver = $conf->{'install_sqwebmail'} or do {
+        $log->audit( 'skipping sqwebmail install (disabled)');
         return;
-    }
+    };
 
     my $httpdir = $conf->{'toaster_http_base'} || "/usr/local/www";
     my $cgi     = $conf->{'toaster_cgi_bin'};
@@ -6520,6 +6523,8 @@ sub vpopmail {
     my $self  = shift;
     my %p = validate( @_, { %std_opts },);
 
+    return $p{test_ok} if defined $p{test_ok}; # for testing
+
     if ( !$conf->{'install_vpopmail'} ) {
         $log->audit( "vpopmail: installing, skipping (disabled)" );
         return;
@@ -6528,8 +6533,6 @@ sub vpopmail {
     my ( $ans, $ddom, $ddb, $cflags, $my_write, $conf_args );
 
     my $version = $conf->{'install_vpopmail'} || "5.4.13";
-
-    return $p{test_ok} if defined $p{test_ok}; # for testing only
 
     if ( $OSNAME eq "freebsd" && $version eq 'port' ) {
         return 1 if $freebsd->is_port_installed( "vpopmail", debug=>1 );
@@ -7145,10 +7148,12 @@ EOMYSQLGRANT
 sub vqadmin {
     my $self  = shift;
     my %p = validate( @_, { %std_opts },);
+ 
+    return $p{test_ok} if defined $p{test_ok}; # for testing
 
-    unless ( $conf->{'install_vqadmin'} ) {
+    if ( ! $conf->{'install_vqadmin'} ) {
         $log->audit( "vqadmin: installing, skipping (disabled)" );
-        return 0;
+        return;
     }
 
     my $cgi  = $conf->{'toaster_cgi_bin'}   || "/usr/local/www/cgi-bin";
