@@ -41,14 +41,12 @@ my $has_net_dns;
 	$r = $qmail->get_list_of_rbls(debug=>0,fatal=>0 );
     # some folks have problems resolving bl.spamcop.net
     if ( $r ) {  
-        cmp_ok ( $r, "eq", ' \
-            -r bl.spamcop.net', 'get_list_of_rbls'); 
+        cmp_ok ( $r, "eq", " \\\n\t\t-r bl.spamcop.net", 'get_list_of_rbls'); 
 
         # test one with a sort order
         $qmail->set_config(  {'rbl_bl.spamcop.net'=> 2} );
         $r = $qmail->get_list_of_rbls( debug=>0, fatal=>0 );
-        cmp_ok ( $r, "eq", ' \
-            -r bl.spamcop.net', 'get_list_of_rbls'); 
+        cmp_ok ( $r, "eq", " \\\n\t\t-r bl.spamcop.net", 'get_list_of_rbls'); 
     };
 
 	# no enabled rbls!
