@@ -11,6 +11,11 @@
      hostname instead of toaster-watcher.conf configured value
    added URI to prereq list in Makefile.PL 
    skip rbl tests if client can't resolv bl.spamcop.net properly
+   FreeBSD->is_port_installed does a better job of port detection when there
+     are multiple ports with similar names (qmail, qmailanalog, etc)
+   corrected whitespace related test error in get_list_of_rbls test
+   added install_munin to toaster-watcher.conf
+
 
 =head2 5.26 - Jun 31, 2010
 
